<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tv_identify_notify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:text="我们将发送信息到这个号码："
            android:textColor="@color/black2"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/smssdk_input_bg_focus"
            android:orientation="horizontal" >

            <EditText
                android:id="@+id/et_put_identify"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/smssdk_write_identify_code"
                android:inputType="phone"
                android:singleLine="true" />

            <ImageView
                android:id="@+id/iv_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"
                android:background="@drawable/smssdk_clear_search"
                android:scaleType="fitCenter"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_unreceive_identify"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/smssdk_receive_msg"
            android:textColor="@color/black3"
            android:textSize="19sp" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/smssdk_btn_disenable"
            android:text="@string/smssdk_next"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>