<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="22dp"
            android:gravity="center"
            android:paddingBottom="10dp" >

            <TextView
                android:id="@+id/tv_country_num"
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:background="@drawable/smssdk_input_bg_focus"
                android:gravity="center"
                android:text="@string/smssdk_country_num"
                android:textColor="#ff353535"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/smssdk_input_bg_focus" >

                <EditText
                    android:id="@+id/et_write_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:background="@null"
                    android:hint="@string/smssdk_write_mobile_phone"
                    android:inputType="phone"
                    android:textColor="#ff353535"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/iv_clear1"
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="12dp"
                    android:background="@drawable/smssdk_clear_search"
                    android:scaleType="centerInside"
                    android:visibility="gone" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_phone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:textColor="@color/black2"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:background="@drawable/smssdk_input_bg_focus"
                android:orientation="horizontal" >

                <EditText
                    android:id="@+id/et_put_identify"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:hint="@string/smssdk_write_identify_code"
                    android:inputType="phone"
                    android:singleLine="true" />

               <!--  <ImageView
                    android:id="@+id/iv_clear2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/smssdk_clear_search"
                    android:scaleType="fitCenter"
                    android:visibility="gone" /> -->
            </LinearLayout>

            <Button
                android:id="@+id/btn_unreceive_identify"
                android:layout_width="70dp"
                android:layout_height="40dp"
                android:background="@drawable/smssdk_btn_disenable"
                android:text="获取"
                android:textColor="@color/white"
                android:textSize="19sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="fill_parent"
            android:layout_height="48dp"
            android:background="@drawable/smssdk_btn_disenable"
            android:text="@string/smssdk_finish"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </LinearLayout>

</LinearLayout>